hack/local-ratelimit-demo/01-toy-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toy-server
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: toy-server
  template:
    metadata:
      labels:
        app: toy-server
    spec:
      containers:
      - name: echo
        image: mendhak/http-https-echo:37
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: toy-server
  namespace: demo
spec:
  selector:
    app: toy-server
  ports:
  - name: http
    port: 8080
    targetPort: 8080
